--- a/dialogs-dark.css
+++ b/dialogs-dark.css
@@ -37,6 +37,7 @@
     /* firefox */
     url(chrome://browser/content/pageinfo/pageInfo.xul), url(chrome://messenger/content/pageinfo/pageInfo.xul),
     url(chrome://browser/content/places/places.xul), url(chrome://messenger/content/places/places.xul),
+    url(chrome://browser/content/preferences/aboutPermissions.xul), url(chrome://messenger/content/preferences/aboutPermissions.xul),
 
     /* addons */
     url-prefix("chrome://dta/content/dta/"),
@@ -46,6 +47,8 @@
     url(chrome://greasemonkey/content/options.xul),
     url(chrome://greasemonkey/content/newscript.xul),
     url(chrome://greasemonkey/content/scriptprefs.xul),
+    url(chrome://lastpass/content/siteinfo.xul),
+    url(chrome://lastpass/content/creategrp.xul),
     url(chrome://treestyletab/content/config.xul),
     url-prefix("chrome://mozapps/content/extensions/about.xul"), /* doesn't apply (due to #) */
     url()
@@ -54,6 +57,7 @@
     window,
     prefwindow,
     dialog,
+    page,
     image,
     img,
     menupopup
@@ -83,7 +87,7 @@
     #devicemanager,
     #certmanager,
     #ConnectionsDialog,
-    #unknownContentType, /* save/open */
+    #unknownContentType, /* svae/open */
     #bpPrefsWinID,
     #cookiemonster-prefs,
     #greasemonkey-options-dialog,
@@ -91,7 +95,8 @@
     #greasemonkey,
     #treestyletab-config,
     #clientBox, /* stylish */
-    #genericAbout>.dialog-button-box /* stylish */
+    #genericAbout>.dialog-button-box, /* stylish */
+    #LPEditSite4, #LPCreateGrp /* LastPass */
     {
         background-color: #E6E9EC; /* inspector body color filtered */
     }
@@ -106,7 +111,10 @@
         background-color: #E6E9EC;
     }
 
-    /*#14171A*/ /* inspector body color unfiltered */
+    #permissions-page
+    {
+        background-color: #14171A; /* inspector body color unfiltered */
+    }
 }
 
 @-moz-document
