--- a/tabview-dark.css
+++ b/tabview-dark.css
@@ -1,5 +1,10 @@
 /**
+ * @name Tabview Dark
  * @stylish-id 118781
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @description
+ *      Dark and a bit more modern look for the "Group Tabs"-overview.
  */
 
 @-moz-document
