--- a/userstyles-org-inverted.css
+++ b/userstyles-org-inverted.css
@@ -1,5 +1,11 @@
 /**
- * @stylish-id <none>
+ * @name userstyles.org Inverted
+ * @stylish-id 117351
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @deprecated I personally don't use this theme anymore and won't continue its maintainance.
+ * @description
+ *     Very simple colour inversion. Looks a bit old fashioned, but everything is perfectly dark and readable.
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
