--- a/about-newtab-cleanup.css
+++ b/about-newtab-cleanup.css
@@ -1,5 +1,10 @@
 /**
+ * @name about:newtab Cleanup
  * @stylish-id 107196
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @description
+ *     9 large tiles completely fill out the about:newtab page, no searchbar (you can use the address bar) and no "Options"-buttons (which doesn't provide any options anyway)
  */
 
 @-moz-document url(about:newtab) {
