--- a/jshint-wide.css
+++ b/jshint-wide.css
@@ -1,5 +1,10 @@
 /**
+ * @name JSHint wide
  * @stylish-id 112047
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @description
+ *    Makes the code and error sections on the JSHint main page use the whole screen (at any resolution).
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
