--- a/mozilla-org-inverted.css
+++ b/mozilla-org-inverted.css
@@ -1,50 +1,105 @@
 /**
+ * @name Mozilla.org Inverted
  * @stylish-id 109480
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @description
+ *    Simple dark 'skin' for Mozilla pages.
+ *
+ *    Makes mozilla.org, mozilla.net and firefox.com dark by applying a simple yet very effective css filter.
+ *
+ *    I've browsed through the top ten of google "site:mozilla.org" (including add-ons and developers) and the result on all pages was somewhere between decent and very good.
+ *
+ *    The only drawbacks are some inverted background images and increased cpu-usage and possibly slight unresponsiveness on pages with many :hover-effects.
+ *
+ *    If you want to un-invert any elements, try the filter that un-inverts the img's.
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
 
-@-moz-document domain("mozilla.org"), domain("mozilla.net"), domain("mozilla.com"), domain("firefox.com") {
-    html {
+@-moz-document
+    domain("mozilla.org"),
+    domain("mozilla.net"),
+    domain("mozilla.com"),
+    domain("firefox.com")
+{
+    html
+    {
         filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
     }
-    img, iframe.video, .promo-face, iframe[src*="youtube.com"], .persona-preview {
+    img,
+    video,
+    iframe.video,
+    .promo-face,
+    iframe[src*="youtube.com"],
+    .persona-preview
+    {
         filter: invert(100%) hue-rotate(180deg) contrast(70%) saturate(50%) brightness(125%);
     }
-    .persona-preview img {
+    .persona-preview img,
+    img[src$=".png"]
+    {
         filter: unset;
     }
-    header {
+    header
+    {
         background-color: lightblue !important;
     }
-    .faces-grid-inner {
+    .faces-grid-inner
+    {
         filter: invert(100%) hue-rotate(180deg) contrast(60%) saturate(50%) brightness(200%);
     }
 }
 
-@-moz-document domain("bugzilla.mozilla.org"),  domain("hg.mozilla.org"),  domain("fhr.cdn.mozilla.net"),  domain("telemetry.mozilla.org"), domain("mozilla.com") {
-    html {
+@-moz-document
+    domain("bugzilla.mozilla.org"),
+    domain("hg.mozilla.org"),
+    domain("fhr.cdn.mozilla.net"),
+    domain("telemetry.mozilla.org"),
+    domain("mozilla.com"),
+    domain("wiki.mozilla.org"),
+    domain("people.mozilla.org")
+{
+    html
+    {
         background-color: black;
     }
 }
 
-@-moz-document domain("developer.mozilla.org") {
-    main {
+@-moz-document
+    domain("developer.mozilla.org")
+{
+    main
+    {
         background-color: white !important;
     }
-    .zone-title a {
+    .zone-title a
+    {
         color: black !important;
     }
 }
 
-@-moz-document domain("services.addons.mozilla.org"), domain("air.mozilla.org"), domain("hacks.mozilla.org"), domain("www.mozilla.org") {
-    html {
+@-moz-document
+    domain("services.addons.mozilla.org"),
+    domain("air.mozilla.org"),
+    domain("hacks.mozilla.org"),
+    domain("www.mozilla.org")
+{
+    html
+    {
         filter: unset;
     }
-    img, iframe.video, .promo-face, iframe[src*="youtube.com"], .persona-preview {
+    img,
+    video,
+    iframe.video,
+    .promo-face,
+    iframe[src*="youtube.com"],
+    .persona-preview
+    {
         filter: unset;
     }
-    header {
+    header
+    {
         background-color: unset !important;
     }
 }
