--- a/stud-ip-dark.css
+++ b/stud-ip-dark.css
@@ -1,5 +1,11 @@
 /**
+ * @name Stud.ip Dark
  * @stylish-id 106286
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @description
+ *     Dark grey/black theme for Stud.IP with red elements.
+ *     I only applied a few personal changes and updates for a newer version of Stud.IP to https://userstyles.org/styles/101211/ostfalia-studip-dark, most credit for this theme goes to CaiusCaligulaCC
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
