--- a/stylish-editor-slim.css
+++ b/stylish-editor-slim.css
@@ -1,5 +1,10 @@
 /**
+ * @name Stylish Editor Slim
  * @stylish-id <none>
+ * @author Niklas Gollenstede
+ * @licence CC-BY-SA-4.0 or MIT
+ * @description
+ *     Makes the Firefox Stylish editor Ui-bar smaller.
  */
 
 @-moz-document
